fix:overflow

--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+body {
+  overflow: hidden !important;
+}
